--- a/css/style.css
+++ b/css/style.css
@@ -132,4 +132,36 @@ color:#737373;
 		width: 100%;
 		height:80px;
 		background:  #66ffff;
+		border-bottom: 2px solid ;
+		color:  #666666;
+}
+
+/* POWERFUL ALONE. BETTER TOGETHER PART*/
+.power-better-part{
+	background: #e6fff2;
+}
+
+.square-img img{
+	width: 150px;
+	height: 150px;
+}
+
+.square-img{
+	position: relative;
+	top: 50%;
+	left: 44%;
+}
+/* TEXT part */
+
+.text-part h2 {
+	text-align: center;
+	color:#4d4d4d;
+	padding: 15px;
+	font-size: 40px;
+}
+.text-part p{
+	color:#4d4d4d;
+	padding: 15px;
+	text-align: center;
+	font-size: 20px
 }
