--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ a{
 ul li{display: inline-block;
 padding: 10px;
 }
+.color{
+color:#4d4d4d;
+}
 
 .fl{
 	float: left;
@@ -82,9 +85,6 @@ header{
 	border-bottom: 2px solid #666666;
 }
 
-.content-top-header a{
-	color:#737373;
-}
 
 /* SECONDA ROW HEADER BIANCA */
 .top-header-second{
@@ -116,12 +116,13 @@ header{
 	height: 100px;
 	font-size: 30px;
 	padding-top: 100px;
-		color:#737373;
 }
 
 .market-sales{
 padding-top:60px;
-color:#737373;
+
+font-size: 15px;
+text-align: left;
 }
 
 .get-hubfree{
@@ -130,7 +131,7 @@ color:#737373;
 }
 
 .get-hubfree a{
-		color:#737373;
+		color:#fff;
 }
 /* FINE TESTO BACKGROUND */
 header:before{
@@ -299,15 +300,14 @@ ul li span{
 .container-tab{
 	width: 802px;
 	height: 300px;
-	border: 1px solid black;
 	margin: 20px auto;
 }
 /* contenuto nei box */
 .box-container{
 	width: 200px;
 	height: 150px;
-	border: 1px solid black;
 	position: relative;
+	padding-top: 20px;
 }
 
 .inside-box{
@@ -324,3 +324,142 @@ ul li span{
 }
 
 /* fine contenuto nei box */
+
+
+/* START CONTAINER BIANCO */
+
+.container-bianco{
+	width: 100%;
+	height: 760px;
+	background: #fff;
+	}
+
+.container-bianco-up{
+	width: 100%;
+	height: 400px;
+	position: relative;
+}
+
+.text-left{
+	width: 40%;
+	height:100%;
+}
+
+.text-left p{
+	font-size: 20px;
+	text-align: left;
+	color:#4d4d4d;
+}
+/* contenuti di sinistra box bianco */
+.container-text-left{
+	width: 200px;
+	height: 350px;
+	margin: 0 auto;
+	padding-top: 60px;
+	text-align: left;
+	color:#4d4d4d;
+}
+
+.container-text-left h3{
+	font-size: 40px;
+}
+.container-text-left p{
+	padding-top: 5px;
+	}
+
+/* contenuti di destra box bianco */
+.logo-right{
+	width: 582px;
+	height:162px;
+	position: absolute;
+	top: 40px;
+	right: 80px;
+}
+
+.box-logo-right{
+	width: 145px;
+	height: 80px;
+}
+
+.box-logo-right img{
+	width: 144px;
+	height: 80px;
+}
+
+/* container bianco parte bassa */
+
+.container-bianco-down{
+	width: 100%;
+	height: 350px;
+}
+
+.left-container-bianco-down{
+	width:50%;
+	height:350px;
+}
+.left-container-bianco-down p{
+font-size: 15px;
+color:#4d4d4d;
+text-align: left;
+padding: 40px 0 40px 0;
+}
+.left-container-bianco-down h3{
+	font-size: 35px;
+
+}
+.left-container-bianco-down span{
+	padding:10px;
+	font-size: 15px;
+}
+
+
+.right-container-bianco-down{
+	width:35%;
+	height:350px; position: relative;
+}
+
+.right-container-bianco-down img{
+	width: 80%;
+	height:350px;
+	position: relative;
+	top: -50px;
+}
+
+.get-started{
+	padding-top: 30px;
+}
+/* fine container bianco parte bianca */
+
+.container-blu-finale{
+	width: 100%;
+	height: 760px;
+	background: #24478f;
+}
+
+.box-cont-blu{
+	width: 25%;
+	height: 350px;
+	text-align:left;
+	color: #fff;
+	padding-top: 26px;
+}
+
+.box-cont-blu ul li{
+	display: block;
+	color: ;
+	padding-left: 0;
+	color:#bfbfbf;
+}
+
+.box-cont-blu ul li:first-child{
+	padding-top: 25px;
+}
+
+.box-cont-blu ul li:last-child{
+	padding-bottom: 15px;
+}
+.contact-hub{
+	color: #003d99;
+	background:#bfbfbf;
+
+}
