--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	margin: 0;
 }
+
 /* utility class */
 a{
 	text-decoration: none;
@@ -16,7 +17,9 @@ padding: 10px;
 .color{
 color:#4d4d4d;
 }
-
+.color-white{
+	color: white;
+}
 .fl{
 	float: left;
 }
@@ -63,7 +66,17 @@ color:#4d4d4d;
 .pad30{
 	padding: 30px;
 }
+.pad15{
+	padding: 15px;
+}
 
+.text{
+	text-align: center;
+}
+
+.bord-bottom{
+border-bottom: 2px solid #fff;
+}
 /* end utility class */
 
 header{
@@ -432,7 +445,7 @@ padding: 40px 0 40px 0;
 
 .container-blu-finale{
 	width: 100%;
-	height: 760px;
+	height: 550px;
 	background: #24478f;
 }
 
@@ -463,3 +476,27 @@ padding: 40px 0 40px 0;
 	background:#bfbfbf;
 
 }
+/* parte finale container blu  footer */
+.logo-social ul li{
+	display: inline-block;
+	padding: 15px 0 15px 10px;
+}
+ /* parte superiore footer */
+
+ .row-up-footer{
+	 width: 100%;
+	 padding: 10px;
+ }
+
+ /* parte inferiore footer */
+ .row-down-footer{
+	 width: 100%;
+	 padding:30px 0;
+ }
+
+ .row-down-left{
+	 width: 40%
+ }
+ .row_down-right{
+	 width: 40%;
+ }
