--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ padding: 10px;
 color:#4d4d4d;
 }
 .color-white{
-	color: white;
+	color:#fff;
 }
 .fl{
 	float: left;
@@ -27,29 +27,31 @@ color:#4d4d4d;
 .fr{
 	float: right;
 }
-
+.en{
+	display: inline-block;
+}
 .clearfix::after{
 	clear: both;
 	display: table;
 	content: "";
 }
+.bord-ri{
+	border-right: 1px solid #fff;
+}
+.bord-bot{
+	border-bottom: 1px solid #fff;
+}
 
 .container{
-	width:1000px;
-	min-width:1000px;
+	width:1100px;
+	max-width:1100px;
+	min-width: 1100px;
 	margin: 0 auto;
-}
-.en{
-	display: inline-block;
-	padding: 15px;
 }
 
 .bord{
-	border-right:1px solid black;
 	padding-right: 10px;
-	height: 3px;
-	line-height: 3px;
-}
+	}
 
 .log{
 	border-radius:3px;
@@ -69,6 +71,9 @@ color:#4d4d4d;
 .pad15{
 	padding: 15px;
 }
+.pad40{
+	padding: 40px;
+}
 
 .text{
 	text-align: center;
@@ -86,6 +91,7 @@ header{
 	background-image: url(../img/jumbotron.png);
 	background-position:right bottom;
 	background-repeat: no-repeat;
+	background-color: #fff2e6;
 }
 /* PARTE SUPERIORE HEADER */
 
@@ -93,11 +99,10 @@ header{
 .top-header{
 	width: 100%;
 	height:80px;
-	background: #66ffff;
+	background:  #e6fff2;
 	padding-top: 10px;
 	border-bottom: 2px solid #666666;
 }
-
 
 /* SECONDA ROW HEADER BIANCA */
 .top-header-second{
@@ -132,8 +137,7 @@ header{
 }
 
 .market-sales{
-padding-top:60px;
-
+padding-top:120px;
 font-size: 15px;
 text-align: left;
 }
@@ -141,11 +145,17 @@ text-align: left;
 .get-hubfree{
 	margin-top: 30px;
 	width: 120px;
+	margin-bottom: 30px;
 }
 
 .get-hubfree a{
 		color:#fff;
-}
+	}
+
+.container span{
+		font-size: 12px;
+
+	}
 /* FINE TESTO BACKGROUND */
 header:before{
 	content: "";
@@ -155,7 +165,8 @@ header:before{
 	width: 100%;
 	height:80px;
 	background:  #66ffff;
-	border-top: 3px solid ;
+	border-top: 3px solid #33475b;
+	border-bottom: 3px solid #33475b;
 	color:  #33475b;
 }
 
@@ -203,6 +214,7 @@ header:before{
 	width: 30%;
 	height: 200px;
 	padding-top:80px;
+
 }
 /* freehub e contact, deals, task */
 .popolar-feat{
@@ -215,21 +227,32 @@ header:before{
 	padding-left: 0;
 }
 .popolar-feat p{
-	font-size: 15px;
-	padding-bottom: 10px;
+	font-size: 18px;
+	padding:20px 0 25px 0;
+  color:#4d4d4d;
+	text-align: left;
 }
 ul li span{
-	padding-left: 10px;
+	padding-left: 15px;
+}
+ul li img{
+vertical-align: middle;
+}
+
+.line{
+	width: 20px;
+	position: relative;
+	bottom: 7px;
+	left: 10px;
 }
 /* inizio box marketing sales e service hub */
-.conteiner-3box{
+.container-3box{
 	width: 100%;
 	height: 620px;
-	padding: 50px 0;
-
 }
 /* caratteristiche dei 3 box */
 .box{
+	top: 30px;
 	position: relative;
 	width: 30%;
 	height: 600px;
@@ -255,7 +278,7 @@ ul li span{
 	width:90%;
 	margin: 0 auto;
 	position: relative;
-	border-top: 2px solid black;
+	border-top: 2px solid #4d4d4d;
 }
 .top-box h3{
 	text-align: center;
@@ -294,7 +317,7 @@ ul li span{
 /* text container celeste */
 .container-celeste{
 	width: 100%;
-	height: 620px;
+	height: 700px;
 	background: #0099ff;
 	margin-top: 60px;
 }
@@ -311,8 +334,7 @@ ul li span{
 /* fine text container celestre */
 
 .container-tab{
-	width: 802px;
-	height: 300px;
+	width: 80%;
 	margin: 20px auto;
 }
 /* contenuto nei box */
@@ -391,12 +413,14 @@ ul li span{
 
 .box-logo-right{
 	width: 145px;
-	height: 80px;
+	height: 60px;
+	padding: 20px;
 }
 
 .box-logo-right img{
 	width: 144px;
-	height: 80px;
+	height: 60px;
+	padding: 12px;
 }
 
 /* container bianco parte bassa */
@@ -492,11 +516,4 @@ padding: 40px 0 40px 0;
  .row-down-footer{
 	 width: 100%;
 	 padding:30px 0;
- }
-
- .row-down-left{
-	 width: 40%
- }
- .row_down-right{
-	 width: 40%;
  }
