--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+	font-family:  sans-serif;
+
 }
 
 /* utility class */
@@ -87,7 +89,7 @@ border-bottom: 2px solid #fff;
 header{
 	position: relative;
 	width: 100%;
-	height:700px;
+	height:800px;
 	background-image: url(../img/jumbotron.png);
 	background-position:right bottom;
 	background-repeat: no-repeat;
@@ -98,26 +100,26 @@ header{
 /* PRIMA ROW HEADER COLOR VERDE CHIARO */
 .top-header{
 	width: 100%;
-	height:80px;
+	height:90px;
 	background:  #e6fff2;
-	padding-top: 10px;
-	border-bottom: 2px solid #666666;
+	padding-top:5px;
 }
 
 /* SECONDA ROW HEADER BIANCA */
 .top-header-second{
 	width: 100%;
-	height:80px;
+	height:60px;
 	position: relative;
-	padding: 20px;
+	padding: 10px;
 	background: #fff;
+	border-top: 1px solid  #666;
 }
 
 .logo-hub img{
 	width: 70px;
 	height:100px;
 	position: absolute;
-	top:0px;
+	top:-15px;
 	}
 
 .right-nav{
@@ -150,6 +152,7 @@ text-align: left;
 
 .get-hubfree a{
 		color:#fff;
+		width: 60px;
 	}
 
 .container span{
